# rustscript

./: Cargo.toml  LICENSE-MIT  README.md  action.yml
.github/workflows/: ci.yml  differential.yml  release.yml  test-action.yml
bench/: Cargo.toml  README.md
bench/cases/: .gitignore
bench/cases/async_tasks/: case.py  case.rs  case.ts
bench/cases/automation/: case.py  case.rs  case.ts  config.json
bench/cases/big_script/: case.py  case.rs  case.ts
bench/cases/binary_trees/: case.py  case.rs  case.ts
bench/cases/collatz/: case.py  case.rs  case.ts
bench/cases/fib/: case.py  case.rs  case.ts
bench/cases/file_transform/: case.py  case.rs  case.ts
bench/cases/hashmap_int/: case.py  case.rs  case.ts
bench/cases/higher_order/: case.py  case.rs  case.ts
bench/cases/http_local/: case.py  case.rs  case.ts
bench/cases/json/: case.py  case.rs  case.ts
bench/cases/json_serialize/: case.py  case.rs  case.ts
bench/cases/mandelbrot/: case.py  case.rs  case.ts
bench/cases/multifile_startup/: case.py  case.rs  case.ts
bench/cases/multifile_startup/modules/: __init__.py  index.ts  m000.py  m000.rs  m000.ts  m001.py  m001.rs  m001.ts  m002.py  m002.rs  m002.ts  m003.py  m003.rs  m003.ts  m004.py  m004.rs  m004.ts  m005.py  m005.rs  m005.ts  m006.py  m006.rs  m006.ts  m007.py  m007.rs  m007.ts  m008.py  m008.rs  m008.ts  m009.py  m009.rs  m009.ts  m010.py  m010.rs  m010.ts  m011.py  m011.rs  m011.ts  m012.py  m012.rs  (+53 more)
bench/cases/nbody/: case.py  case.rs  case.ts
bench/cases/process_spawn/: case.py  case.rs  case.ts
bench/cases/regex/: case.py  case.rs  case.ts
bench/cases/sieve/: case.py  case.rs  case.ts
bench/cases/sort/: case.py  case.rs  case.ts
bench/cases/sort_key/: case.py  case.rs  case.ts
bench/cases/stdout_lines/: case.py  case.rs  case.ts
bench/cases/string_builder/: case.py  case.rs  case.ts
bench/cases/word_count/: case.py  case.rs  case.ts  data.txt
bench/results/: .gitignore  results.json
bench/src/: http_server.rs  lib.rs  provenance.rs  sample.rs
crates/conformance/: Cargo.toml
crates/conformance/src/: geometry.rs  main.rs  prelude.rs
crates/conformance/src/data/: mod.rs  models.rs  store.rs
crates/conformance/src/geometry/: shapes.rs
crates/conformance/src/geometry/ops/: mod.rs  transform.rs
crates/differential/: Cargo.toml  quarantine.toml
crates/differential/corpus/: f64_cast_closure_overflow.rs  narrow_rem_min_overflow.rs  narrow_u8_mul_overflow.rs  numeric_i8_negate_overflow.rs  numeric_u16_shift_overflow.rs  numeric_u8_add_overflow.rs
crates/differential/src/: artifact.rs  closure_case.rs  generator.rs  lib.rs  main.rs  method_case.rs  model.rs  mutator.rs  numeric.rs  numeric_gen.rs  quarantine.rs  reduce.rs  rich.rs  runner.rs  semantic.rs  semantic_gen.rs  structural.rs  structural_gen.rs  typed.rs  typed_gen.rs  typed_render.rs  typed_shrink.rs
crates/differential/tests/: corpus.rs  generator.rs
crates/examples/: Cargo.toml
crates/examples/examples/: args_echo.rs  ascii_case_product.rs  bank_account.rs  callable_expressions.rs  closure_in_closure.rs  collatz.rs  collect_string_let.rs  config_formats.rs  ctrlc_handler.rs  datetime.rs  demo.rs  dir_walk.rs  encoding.rs  env_vars.rs  fib.rs  file_io.rs  file_metadata.rs  filter_lines.rs  fizzbuzz.rs  float_format.rs  float_parse.rs  fn_item_values.rs  fn_item_values_async.rs  format_specs.rs  glob_files.rs  group_by.rs  hanoi.rs  hello.rs  int_convert.rs  integer_casts.rs  json_config.rs  json_generic.rs  json_option.rs  json_typed.rs  json_value_match.rs  jwt_sign.rs  manual_service_write.rs  match_unit_variant.rs  mutable_closure_capture.rs  mutable_closure_capture_async.rs  (+45 more)
crates/examples/src/: lib.rs
crates/rustscript/: Cargo.toml  build.rs
crates/rustscript/src/: bridge_tables_build.rs  build_info.rs  checker.rs  loader.rs  main.rs  supported.rs  update.rs
crates/rustscript/src/interpreter/: builtins.rs  bytecode.rs  compile.rs  console.rs  coverage.rs  crates_bridge.rs  docx_bridge.rs  eval.rs  format.rs  higher_order.rs  http.rs  iterator.rs  json_bridge.rs  jwt_bridge.rs  methods.rs  mod.rs  native.rs  numeric.rs  ops.rs  pbridge.rs  pchunk.rs  pdf_bridge.rs  phttp.rs  pjson.rs  pnative.rs  pops.rs  pprocess.rs  pregex.rs  process.rs  pstd.rs  pvalue.rs  pvm.rs  regex_bridge.rs  resolver.rs  runner.rs  service_bridge.rs  shared.rs  std_bridge.rs  typeir.rs  value.rs  (+5 more)
crates/rustscript/src/interpreter/compile/: calls.rs  expr.rs  macros.rs  mod.rs
crates/rustscript/src/update/: asset.rs  install.rs  mod.rs  records.rs  release.rs
crates/rustscript/tests/: check.rs  cli.rs  equivalence.rs  examples.rs  failures.rs  local_crate.rs  multifile.rs  run.rs  traces.rs
docs/: github-actions.md  multifile.md  profiling.md  supported.md
