[workspace]
resolver = "3"
members = ["crates/rustscript", "crates/examples"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
ureq = "3.3"
regex = "1.12"
