[workspace]
resolver = "3"
members = ["crates/rustscript", "crates/examples", "crates/conformance", "bench"]

[workspace.dependencies]
compact_str = "0.9"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "ttf", "all_series"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "cookies"], default-features = false }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
regex = "1.12"
indexmap = "2"
rustc-hash = "2.1"
mimalloc = "0.1"
which = "8.0"
rand = "0.10"
glob = "0.3"
chrono = "0.4"
dirs = "6.0"
toml = "1.1"
serde_yaml = "0.9"
colored = "3.1"
base64 = "0.22"
hex = "0.4"
ctrlc = "3.5"
tempfile = "3.27"
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }
