[package]
name = "rustscript-bench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plotters = { workspace = true }
regex = { workspace = true }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "chart"
path = "src/bin/chart.rs"

[[bin]]
name = "gendata"
path = "src/bin/gendata.rs"

# The Rust side of every case is also a real compiled cargo example, built with
# the real toolchain. The same file runs under the interpreter, so one source
# feeds both the native bar and the rustscript bar.
[[example]]
name = "hello"
path = "cases/hello/case.rs"

[[example]]
name = "fib"
path = "cases/fib/case.rs"

[[example]]
name = "sieve"
path = "cases/sieve/case.rs"

[[example]]
name = "mandelbrot"
path = "cases/mandelbrot/case.rs"

[[example]]
name = "collatz"
path = "cases/collatz/case.rs"

[[example]]
name = "word_count"
path = "cases/word_count/case.rs"

[[example]]
name = "json"
path = "cases/json/case.rs"

[[example]]
name = "binary_trees"
path = "cases/binary_trees/case.rs"

[[example]]
name = "string_builder"
path = "cases/string_builder/case.rs"

[[example]]
name = "higher_order"
path = "cases/higher_order/case.rs"

[[example]]
name = "sort"
path = "cases/sort/case.rs"

[[example]]
name = "hashmap_int"
path = "cases/hashmap_int/case.rs"

[[example]]
name = "nbody"
path = "cases/nbody/case.rs"

[[example]]
name = "regex"
path = "cases/regex/case.rs"

[[example]]
name = "json_serialize"
path = "cases/json_serialize/case.rs"

[[example]]
name = "stdout_lines"
path = "cases/stdout_lines/case.rs"

[[example]]
name = "big_script"
path = "cases/big_script/case.rs"
