[package]
name = "rustscript-bench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plotters = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "chart"
path = "src/bin/chart.rs"

[[bin]]
name = "gendata"
path = "src/bin/gendata.rs"

[[bin]]
name = "bench-child"
path = "src/bin/bench_child.rs"

[[bin]]
name = "bench-server"
path = "src/bin/bench_server.rs"

# The Rust side of every case is also a real compiled cargo binary, built with
# the real toolchain. The same file runs under the interpreter, so one source
# feeds both the native bar and the rustscript bar.
[[bin]]
name = "hello"
path = "cases/hello/case.rs"

[[bin]]
name = "fib"
path = "cases/fib/case.rs"

[[bin]]
name = "sieve"
path = "cases/sieve/case.rs"

[[bin]]
name = "mandelbrot"
path = "cases/mandelbrot/case.rs"

[[bin]]
name = "collatz"
path = "cases/collatz/case.rs"

[[bin]]
name = "word_count"
path = "cases/word_count/case.rs"

[[bin]]
name = "json"
path = "cases/json/case.rs"

[[bin]]
name = "binary_trees"
path = "cases/binary_trees/case.rs"

[[bin]]
name = "string_builder"
path = "cases/string_builder/case.rs"

[[bin]]
name = "higher_order"
path = "cases/higher_order/case.rs"

[[bin]]
name = "sort"
path = "cases/sort/case.rs"

[[bin]]
name = "sort_key"
path = "cases/sort_key/case.rs"

[[bin]]
name = "hashmap_int"
path = "cases/hashmap_int/case.rs"

[[bin]]
name = "nbody"
path = "cases/nbody/case.rs"

[[bin]]
name = "regex"
path = "cases/regex/case.rs"

[[bin]]
name = "json_serialize"
path = "cases/json_serialize/case.rs"

[[bin]]
name = "stdout_lines"
path = "cases/stdout_lines/case.rs"

[[bin]]
name = "big_script"
path = "cases/big_script/case.rs"

[[bin]]
name = "multifile_startup"
path = "cases/multifile_startup/case.rs"

[[bin]]
name = "file_transform"
path = "cases/file_transform/case.rs"

[[bin]]
name = "process_spawn"
path = "cases/process_spawn/case.rs"

[[bin]]
name = "async_tasks"
path = "cases/async_tasks/case.rs"

[[bin]]
name = "http_local"
path = "cases/http_local/case.rs"

[[bin]]
name = "automation"
path = "cases/automation/case.rs"
