[package]
name = "rustscript-differential"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "rustscript-differential"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
syn = { workspace = true }
