[package]
name = "rustscript-examples"
version = "0.1.0"
edition = "2024"
publish = false

# Sample programs in the rustscript language. Each file under `examples/` is
# both a runnable rustscript script and a real cargo example, so `cargo build
# --examples` compiles them with the same crates a script may use.

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
rand = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }

[target."cfg(windows)".dev-dependencies]
winreg = { workspace = true }
windows-service = { workspace = true }
wmi = { workspace = true }

# registry_demo only compiles where the registry exists. Naming it explicitly
# turns off example autodiscovery for that one file, and the required-feature
# is never set, so cargo skips building it. The examples suite skips running it
# off Windows the same way it skips symlink_demo.
[[example]]
name = "registry_demo"
required-features = ["windows-only"]

[[example]]
name = "service_demo"
required-features = ["windows-only"]

[[example]]
name = "wmi_demo"
required-features = ["windows-only"]

[[example]]
name = "manual_service_write"
required-features = ["windows-only"]

[features]
windows-only = []
