[package]
name = "rustscript"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
reqwest = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
which = { workspace = true }
rand = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
mimalloc = { workspace = true }
compact_str = { workspace = true }
jsonwebtoken = { workspace = true }
