[package]
name = "rustscript"
version = "0.1.2"
edition = "2024"
description = "Run a subset of Rust as an interpreted script"
repository = "https://github.com/VladasZ/rustscript"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
reqwest = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
which = { workspace = true }
rand = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
mimalloc = { workspace = true }
compact_str = { workspace = true }
jsonwebtoken = { workspace = true }
lopdf = "0.44.0"
xmltree = "0.12.0"

[build-dependencies]
chrono = { workspace = true }
