[package]
name = "run-rs"
version = "0.2.9"
edition = "2024"
description = "Run a subset of Rust as an interpreted script"
repository = "https://github.com/VladasZ/rustscript"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
keywords = ["rust", "scripting", "interpreter", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
reqwest = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
which = { workspace = true }
rand = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
mimalloc = { workspace = true }
compact_str = { workspace = true }
jsonwebtoken = { workspace = true }
lopdf = { workspace = true }
xmltree = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
indicatif = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }

[target."cfg(windows)".dependencies]
encoding_rs = { workspace = true }
windows-service = { workspace = true }
windows-sys = { workspace = true }
winreg = { workspace = true }
wmi = { workspace = true }
